[gd_scene load_steps=24 format=3 uid="uid://co0pj5hmm602x"]

[ext_resource type="Script" path="res://mainmenu.gd" id="1_6syls"]
[ext_resource type="Shader" path="res://scroll.gdshader" id="2_27xmd"]
[ext_resource type="Script" path="res://start_button.gd" id="2_d5gbx"]
[ext_resource type="Texture2D" uid="uid://d327mc06y0pa6" path="res://Assets/Buttons/Unmute_Medium.png" id="2_h262g"]
[ext_resource type="Shader" path="res://wavy.gdshader" id="2_vg038"]
[ext_resource type="Texture2D" uid="uid://rdkcq31h63j3" path="res://Assets/Buttons/Mute_Medium.png" id="3_g1nhb"]
[ext_resource type="Texture2D" uid="uid://byr75hqqbdfsa" path="res://Assets/Backgrounds/MainMenu_8_Large_Transparent.png" id="3_qm8sf"]
[ext_resource type="Texture2D" uid="uid://ccgmyeea7uuso" path="res://Assets/Buttons/MainMenu/Play_4.png" id="7_j7gx1"]
[ext_resource type="Texture2D" uid="uid://bg5uya307ehv8" path="res://Assets/TitleCard.png" id="10_iaaf2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d7nwu"]
resource_local_to_scene = true
shader = ExtResource("2_27xmd")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nx3b4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4jxcf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_24le5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ytqc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0fhbr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dny5t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qidbh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bx048"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ow8ws"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_je12f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_drlsf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5g0df"]
shader = ExtResource("2_vg038")
shader_parameter/waveAmplitude = 0.025
shader_parameter/correctVertex = false
shader_parameter/waveFrequency = 10.0
shader_parameter/verticalWave = true
shader_parameter/keepTransparency = true
shader_parameter/useTime = true
shader_parameter/waveSpeed = 1.0
shader_parameter/progress = 0.0
shader_parameter/firstHalf = 0.5
shader_parameter/secondHalf = 0.5
shader_parameter/freezeFirstHalf = false
shader_parameter/freezeSecondHalf = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_olotx"]
shader = ExtResource("2_vg038")
shader_parameter/waveAmplitude = 0.126
shader_parameter/correctVertex = true
shader_parameter/waveFrequency = 10.0
shader_parameter/verticalWave = true
shader_parameter/keepTransparency = true
shader_parameter/useTime = true
shader_parameter/waveSpeed = 1.0
shader_parameter/progress = 0.0
shader_parameter/firstHalf = 0.5
shader_parameter/secondHalf = 0.5
shader_parameter/freezeFirstHalf = false
shader_parameter/freezeSecondHalf = false

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6syls")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_d7nwu")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_qm8sf")
stretch_mode = 1

[node name="AudioToggle" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 1114.0
offset_top = 23.0
offset_right = 1178.0
offset_bottom = 87.0
toggle_mode = true
texture_normal = ExtResource("2_h262g")
texture_pressed = ExtResource("3_g1nhb")
stretch_mode = 4

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 600.0
offset_right = 520.0
offset_bottom = 600.0
scale = Vector2(1, 1.00415)

[node name="StartButton" type="Button" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_nx3b4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4jxcf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_24le5")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_3ytqc")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_0fhbr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_dny5t")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qidbh")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_bx048")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ow8ws")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_je12f")
theme_override_styles/normal = SubResource("StyleBoxEmpty_drlsf")
script = ExtResource("2_d5gbx")

[node name="StartButtonTooltip" type="RichTextLabel" parent="Menu/StartButton"]
visible = false
layout_mode = 2
offset_left = 241.0
offset_top = -33.0
offset_right = 429.0
offset_bottom = 22.0
text = "This button starts the game!"

[node name="TextureRect" type="TextureRect" parent="Menu/StartButton"]
material = SubResource("ShaderMaterial_5g0df")
layout_mode = 0
offset_right = 120.0
offset_bottom = 56.0
scale = Vector2(2, 2)
texture = ExtResource("7_j7gx1")
stretch_mode = 2

[node name="TitleCard" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_olotx")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -118.0
offset_right = 512.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_iaaf2")

[connection signal="pressed" from="AudioToggle" to="." method="_on_audio_toggle_pressed"]
[connection signal="mouse_entered" from="Menu/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="Menu/StartButton" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="Menu/StartButton" to="." method="_on_start_button_pressed"]
